@@ -37,9 +37,9 @@ import org.jikesrvm.VM;
 import org.jikesrvm.architecture.StackFrameLayout;
 import org.jikesrvm.scheduler.RVMThread;
 
+import jdk.internal.reflect.Reflection;
 import sun.misc.SoftCache;
-//import sun.nio.ch.Interruptible;
-import sun.reflect.Reflection;
+import sun.nio.ch.Interruptible;
 import sun.security.util.SecurityConstants;
 
 
@@ -222,16 +222,19 @@ class Thread implements Runnable {
      * operation, if any.  The blocker's interrupt method should be invoked
      * after setting this thread's interrupt status.
      */
-//    private volatile Interruptible blocker;
-    private Object blockerLock = new Object();
+    private volatile Interruptible blocker;
+    private final Object blockerLock = new Object();
 
-    /* Set the blocker field; invoked via sun.misc.SharedSecrets from java.nio code
+    /* Set the blocker field; invoked via jdk.internal.misc.SharedSecrets
+     * from java.nio code
      */
-//    void blockedOn(Interruptible b) {
-//        synchronized (blockerLock) {
-//            blocker = b;
-//        }
-//    }
+    static void blockedOn(Interruptible b) {
+        Thread me = Thread.currentThread();
+        synchronized (me.blockerLock) {
+            me.blocker = b;
+        }
+    }
+
 
     /**
      * The minimum priority that a thread can have.
@@ -406,40 +409,15 @@ class Thread implements Runnable {
     }
 
     /**
-     * Returns a clone if the class of this object is {@link Cloneable Cloneable}.
-     *
-     * @return  a clone if the class of this object is {@code Cloneable}
+     * Throws CloneNotSupportedException as a Thread can not be meaningfully
+     * cloned. Construct a new Thread instead.
      *
      * @throws  CloneNotSupportedException
-     *          if this method is invoked on a class that does not
-     *          support {@code Cloneable}
+     *          always
      */
     @Override
     protected Object clone() throws CloneNotSupportedException {
-        Thread t;
-        synchronized(this) {
-            t = (Thread) super.clone();
-
-            t.tid = nextThreadID();
-            t.parkBlocker = null;
-//            t.blocker = null;
-            t.blockerLock = new Object();
-            t.threadLocals = null;
-
-            group.checkAccess();
-            if (threadStatus == 0) {
-                group.addUnstarted();
-            }
-            t.setPriority(priority);
-
-            final Thread current = Thread.currentThread();
-            if (current.inheritableThreadLocals != null)
-                t.inheritableThreadLocals =
-                    ThreadLocal.createInheritedMap(current.inheritableThreadLocals);
-        }
-
-        t.me = t;
-        return t;
+        throw new CloneNotSupportedException();
     }
 
     /**
@@ -649,6 +627,139 @@ class Thread implements Runnable {
     public Thread(ThreadGroup group, Runnable target, String name,
                   long stackSize) {
         init(group, target, name, stackSize);
+    }
+
+    /**
+     * Allocates a new {@code Thread} object so that it has {@code target}
+     * as its run object, has the specified {@code name} as its name,
+     * belongs to the thread group referred to by {@code group}, has
+     * the specified {@code stackSize}, and inherits initial values for
+     * {@linkplain InheritableThreadLocal inheritable thread-local} variables
+     * if {@code inheritThreadLocals} is {@code true}.
+     *
+     * <p> This constructor is identical to {@link
+     * #Thread(ThreadGroup,Runnable,String,long)} with the added ability to
+     * suppress, or not, the inheriting of initial values for inheritable
+     * thread-local variables from the constructing thread. This allows for
+     * finer grain control over inheritable thread-locals. Care must be taken
+     * when passing a value of {@code false} for {@code inheritThreadLocals},
+     * as it may lead to unexpected behavior if the new thread executes code
+     * that expects a specific thread-local value to be inherited.
+     *
+     * <p> Specifying a value of {@code true} for the {@code inheritThreadLocals}
+     * parameter will cause this constructor to behave exactly like the
+     * {@code Thread(ThreadGroup, Runnable, String, long)} constructor.
+     *
+     * @param  group
+     *         the thread group. If {@code null} and there is a security
+     *         manager, the group is determined by {@linkplain
+     *         SecurityManager#getThreadGroup SecurityManager.getThreadGroup()}.
+     *         If there is not a security manager or {@code
+     *         SecurityManager.getThreadGroup()} returns {@code null}, the group
+     *         is set to the current thread's thread group.
+     *
+     * @param  target
+     *         the object whose {@code run} method is invoked when this thread
+     *         is started. If {@code null}, this thread's run method is invoked.
+     *
+     * @param  name
+     *         the name of the new thread
+     *
+     * @param  stackSize
+     *         the desired stack size for the new thread, or zero to indicate
+     *         that this parameter is to be ignored
+     *
+     * @param  inheritThreadLocals
+     *         if {@code true}, inherit initial values for inheritable
+     *         thread-locals from the constructing thread, otherwise no initial
+     *         values are inherited
+     *
+     * @throws  SecurityException
+     *          if the current thread cannot create a thread in the specified
+     *          thread group
+     *
+     * @since 9
+     */
+    public Thread(ThreadGroup group, Runnable target, String name,
+                  long stackSize, boolean inheritThreadLocals) {
+        this(group, target, name, stackSize, null, inheritThreadLocals);
+    }
+
+    /**
+     * Initializes a Thread.
+     *
+     * @param g the Thread group
+     * @param target the object whose run() method gets called
+     * @param name the name of the new Thread
+     * @param stackSize the desired stack size for the new thread, or
+     *        zero to indicate that this parameter is to be ignored.
+     * @param acc the AccessControlContext to inherit, or
+     *            AccessController.getContext() if null
+     * @param inheritThreadLocals if {@code true}, inherit initial values for
+     *            inheritable thread-locals from the constructing thread
+     */
+    private Thread(ThreadGroup g, Runnable target, String name,
+                   long stackSize, AccessControlContext acc,
+                   boolean inheritThreadLocals) {
+        if (name == null) {
+            throw new NullPointerException("name cannot be null");
+        }
+
+        this.name = name.toCharArray();
+
+        Thread parent = currentThread();
+        SecurityManager security = System.getSecurityManager();
+        if (g == null) {
+            /* Determine if it's an applet or not */
+
+            /* If there is a security manager, ask the security manager
+               what to do. */
+            if (security != null) {
+                g = security.getThreadGroup();
+            }
+
+            /* If the security manager doesn't have a strong opinion
+               on the matter, use the parent thread group. */
+            if (g == null) {
+                g = parent.getThreadGroup();
+            }
+        }
+
+        /* checkAccess regardless of whether or not threadgroup is
+           explicitly passed in. */
+        g.checkAccess();
+
+        /*
+         * Do we have the required permissions?
+         */
+        if (security != null) {
+            if (isCCLOverridden(getClass())) {
+                security.checkPermission(
+                        SecurityConstants.SUBCLASS_IMPLEMENTATION_PERMISSION);
+            }
+        }
+
+        g.addUnstarted();
+
+        this.group = g;
+        this.daemon = parent.isDaemon();
+        this.priority = parent.getPriority();
+        if (security == null || isCCLOverridden(parent.getClass()))
+            this.contextClassLoader = parent.getContextClassLoader();
+        else
+            this.contextClassLoader = parent.contextClassLoader;
+        this.inheritedAccessControlContext =
+                acc != null ? acc : AccessController.getContext();
+        this.target = target;
+        setPriority(priority);
+        if (inheritThreadLocals && parent.inheritableThreadLocals != null)
+            this.inheritableThreadLocals =
+                ThreadLocal.createInheritedMap(parent.inheritableThreadLocals);
+        /* Stash the specified stack size in case the VM cares */
+        this.stackSize = stackSize;
+
+        /* Set thread ID */
+        this.tid = nextThreadID();
     }
 
     /**
@@ -868,14 +979,14 @@ class Thread implements Runnable {
      * Common impl for stop() and stop(Throwable).
      */
     private final synchronized void stop1(Throwable th) {
-        SecurityManager security = System.getSecurityManager();
-        if (security != null) {
-            checkAccess();
-            if ((this != Thread.currentThread()) ||
-                (!(th instanceof ThreadDeath))) {
-                security.checkPermission(SecurityConstants.STOP_THREAD_PERMISSION);
-            }
-        }
+//        SecurityManager security = System.getSecurityManager();
+//        if (security != null) {
+//            checkAccess();
+//            if ((this != Thread.currentThread()) ||
+//                (!(th instanceof ThreadDeath))) {
+//                security.checkPermission(SecurityConstants.STOP_THREAD_PERMISSION);
+//            }
+//        }
         // A zero status value corresponds to "NEW"
         if (threadStatus != 0) {
             resume(); // Wake up thread if it was suspended; no-op otherwise
@@ -1521,12 +1632,6 @@ class Thread implements Runnable {
      */
     public StackTraceElement[] getStackTrace() {
         if (this != Thread.currentThread()) {
-            // check for getStackTrace permission
-            SecurityManager security = System.getSecurityManager();
-            if (security != null) {
-                security.checkPermission(
-                    SecurityConstants.GET_STACK_TRACE_PERMISSION);
-            }
             // optimization so we do not call into the vm for threads that
             // have not yet started or have terminated
             if (!isAlive()) {
@@ -1582,14 +1687,6 @@ class Thread implements Runnable {
      * @since 1.5
      */
     public static Map<Thread, StackTraceElement[]> getAllStackTraces() {
-        // check for getStackTrace permission
-        SecurityManager security = System.getSecurityManager();
-        if (security != null) {
-            security.checkPermission(
-                SecurityConstants.GET_STACK_TRACE_PERMISSION);
-            security.checkPermission(
-                SecurityConstants.MODIFY_THREADGROUP_PERMISSION);
-        }
 
         // Get a snapshot of the list of all threads
         Thread[] threads = getThreads();
